# plumepackclone

./: .gitignore  Bcaradi RL.prproj  README.md  index.html  package-lock.json  package.json  tailwind.config.js
parser-test/: Cargo.toml
parser-test/src/: main.rs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  consolidation.rs  ffmpeg.rs  lib.rs  main.rs  media_scanner.rs  project_parser.rs  sequence_analyzer.rs
src/components/: ConsolidationProgress.tsx  ConsolidationSettings.tsx  MediaList.tsx  ProjectDropZone.tsx  SequenceList.tsx
src/lib/: utils.ts
