[package]
name = "plumepack-clone"
version = "0.1.0"
description = "PlumePack V3 Clone - Premiere Pro Project Consolidation Tool"
authors = ["Neofox Media"]
edition = "2021"

[lib]
name = "plumepack_clone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
flate2 = "1.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
